test/15-Typing/Signatures/Bad/LargerConstraints/Test.ds
{-# OPTIONS -no-implicit-prelude #-}

import	Base
	Data.Numeric.Int32

succ 	<: Int %r1 {read} -> Int {read} -> Int %r2
succ x y
 = do	x'	= (+) @ x 5
	x' + y
